250712_リストの使い方
# ターミナルで宣言したPythonの変数はどこに保存されるか
変数 l はコンピュータのメモリ（RAM）に保存されます
ハードディスクやSSDには保存されません
一時的な記憶領域です

# いつまで使えるか
exit() または quit() でPythonを終了
Ctrl+Z（Windows）や Ctrl+D（Mac/Linux）で終了
ターミナル/コマンドプロンプトを閉じる
コンピュータを再起動

# だからこういうのも本当はできた（以降はこれでやりたい）
>>> s = 'どうもみなさんこんにちは'
>>> print(s.find('み'))
3

# リストの書き方の練習
>>> l = [1, 2, 3, 4, 5]
>>> l
[1, 2, 3, 4, 5]
>>> s = 'どうもみなさんこんにちは'
>>> print(s.find('み'))
3
>>> l[0]
1
>>> l[0:2]
[1, 2]
>>> l[2:]
[3, 4, 5]
>>> l
[1, 2, 3, 4, 5]
>>> n = [1,2,3,4,5,6,7,8,9,10]
>>> n
[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
>>> n[::2]
[1, 3, 5, 7, 9]
>>> len(num)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'num' is not defined. Did you mean: 'sum'?
>>> len(l)
5
>>> len(num)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'num' is not defined. Did you mean: 'sum'?
>>> len(n)
10
>>> type(n)
<class 'list'>
>>> n(1) = 10
  File "<stdin>", line 1
    n(1) = 10
    ^^^^
SyntaxError: cannot assign to function call here. Maybe you meant '==' instead of '='?
>>> n[1] = 10
>>> n
[1, 10, 3, 4, 5, 6, 7, 8, 9, 10]
>>> n[0:2] = [10,20,30]
>>> n
[10, 20, 30, 3, 4, 5, 6, 7, 8, 9, 10]
>>> print(n)
[10, 20, 30, 3, 4, 5, 6, 7, 8, 9, 10]
>>> n[:] = []
>>> n
[]
>>> n = [1,2,3,4,5,6,7,8,9,10]
>>> n
[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
>>> n.append(100)
>>> n
[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 100]
>>> n.insert(100)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: insert expected 2 arguments, got 1
>>> n.insert(0,100)
>>> n
[100, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 100]
>>> n.pop()
100
>>> n
[100, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
>>> n.pop(0)
100
>>> n
[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
>>> del.n[0]
  File "<stdin>", line 1
    del.n[0]
       ^
SyntaxError: invalid syntax
>>> del n
>>> n
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'n' is not defined
>>> n = [1,2,2,2,3]
>>> n.remove(2)
>>> n
[1, 2, 2, 3]
>>> del n
>>> a = [1,2,3,4,5]
>>> b = [6,7,8,9,10]
>>> a + b
[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
>>> a += b
>>> a
[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
>>> a.index(3)
2
>>> a.count(1)
1
>>> a.sort()1
  File "<stdin>", line 1
    a.sort()1
            ^
SyntaxError: invalid syntax
>>> a.sort()
>>> a
[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
>>> a.sort(reverse = True)
>>> a
[10, 9, 8, 7, 6, 5, 4, 3, 2, 1]
>>> s
'どうもみなさんこんにちは'
>>> s = 'My name is Mike'
>>> s
'My name is Mike'
>>> s.split(' ')
['My', 'name', 'is', 'Mike']
>>> seat = []
>>> min = 0
>>> max = 5
>>> min <= len(seat) < max
True
>>> seat.append('p')
>>> min <= len(seat) < max
True
>>> len(seat)
1
>>> seat.append('p')
>>> seat.append('p')
>>> min <= len(seat) < max
True
>>> seat.append('p')
>>> seat.append('p')
>>> min <= len(seat) < max
False
>>> seat.pop(0)
'p'
>>> min <= len(seat) < max
True
